<resources>
    <string name="app_name">DeepInk</string>
    <string name="app_full_name">DEEPINK READER</string>
    <string name="bookshelf_name">正在阅读</string>
    <string name="main_bookshelf_search">搜书</string>
    <string name="main_bookshelf_me">我的配置</string>
    <string name="main_left_add_bookshelf">添加书架</string>
    <string name="main_left_toolbar_title">书架列表</string>
    <string name="main_right_toolbar_title">EXPERIENCER</string>
    <string name="main_right_scan_local">图书</string>
    <string name="main_right_manage_book_src">书源</string>
    <string name="main_right_rank">排行</string>
    <string name="multiManage">批量管理书架</string>
    <string name="manageBookshelf">编辑书架</string>
    <string name="deleteBookshelf">删除书架</string>
    <string name="edit_bookshelf_info">编辑书架</string>
    <string name="cancel">取消</string>
    <string name="changeBookshelf">移动书架</string>
    <string name="bookInfo">查看详情</string>
    <string name="deleteBook">删除图书</string>
    <string name="search_book_edittext_hint">搜索书名或作者</string>
    <string name="pay_for_app"><![CDATA[付费订阅 >]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_history">搜索历史</string>
    <string name="clean_search_history">清空</string>
    <string name="bookshelf">书架</string>
    <string name="book_src_manage">我的书源</string>
    <string name="import_src">书源导入</string>
    <string name="import_web_site">网址导入</string>
    <string name="comments_src">评分</string>
    <string name="delete_src">卸载</string>
    <string name="RSS">RSS</string>
    <string name="community">社区</string>
    <string name="settings">设置</string>
    <string name="public_test">公测</string>
    <string name="test_version">公测 1.3.0</string>
    <string name="account_center">账号中心</string>
    <string name="update_des">图书/RSS两次时间间隔大于设定的时长时触发检查。</string>
    <string name="check_update">检查更新</string>
    <string name="system_theme">跟随系统切换深色主题，适用于Android 10+系统</string>
    <string name="system_theme_text">系统主题</string>
    <string name="middle_font_size">中等字号</string>
    <string name="sign_notice">签到提醒</string>
    <string name="chasingMode">追更模式</string>
    <string name="chasing_mode_text">该功能基于消息通知（非服务器推送），适用于符合规则的图书订阅更新。当设备连接网络时，服务每间隔1小时左右自动检查已订阅的图书章节是否有更新，同时将更新详情以消息通知的方式展现，耗电量几乎可以忽略不计且夜间免打扰。该模式需在多任务中锁定厚墨。</string>
    <string name="shoot_screen">投屏</string>
    <string name="user_guide">用户指南</string>
    <string name="use_space">使用空间</string>
    <string name="use_agreement">用户协议</string>
    <string name="open_source_agreement">开源协议</string>
    <string name="search_local_book_edittext_hint">搜索文件名</string>
    <string name="addStoragePermission">存储访问</string>
    <string name="default_folder">默认文件夹</string>
    <string name="relateToWebDav">关联WebDAV服务器</string>
    <string name="web_dav">WebDAV</string>
    <string name="canAccessFolders">授权文件夹</string>
    <string name="requestPermission">授权访问文件夹</string>
    <string name="delete">删除</string>
    <string name="local_book_import">导入</string>
    <string name="book_name">书名</string>
    <string name="chapter_regex">章节正则</string>
    <string name="regex_apply">应用</string>
    <string name="default_bookshelf">默认</string>
    <string name="details">详细</string>
    <string name="directory">目录</string>
    <string name="more">更多</string>
    <string name="no_pre_chapter">很抱歉，已翻到最前页。</string>
    <string name="no_next_chapter">很抱歉，已翻到末页。</string>
    <string name="voice">朗读</string>
    <string name="night">夜间模式</string>
</resources>