<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_bookshelfName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout_multiManage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_multiManage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_main_left_more_multi" />

        <TextView
            android:id="@+id/text_multiManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/multiManage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_manageBookshelf"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_manageBookshelf"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_main_left_more_edit" />

        <TextView
            android:id="@+id/text_manageBookshelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/manageBookshelf" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_deleteBookshelf"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_deleteBookshelf"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_main_left_more_rubbish" />

        <TextView
            android:id="@+id/text_deleteBookshelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/deleteBookshelf" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:background="@drawable/selector_save_btn"
        android:text="@string/cancel" />

</LinearLayout>